# r2bot_ws

./: .gitignore  README.md  can_command.py  can_command.py.bak.20260713_182913  r2_run.sh  r2_run.sh.bak_20260713_132524  r2_run.sh.save  wait_lidar_gate.py
src/chassis_can_driver/: CMakeLists.txt  package.xml
src/chassis_can_driver/scripts/: chassis_can_driver.py  chassis_can_driver.py.bak_before_vy_20260713_195932  chassis_can_driver.py.pid_20260713_212734
src/ldlidar_ros2/include/: ros2_api.h
src/ldlidar_ros2/launch/: ld06.launch.py  ld14.launch.py  ld14p.launch.py  ld19.launch.py
src/ldlidar_ros2/scripts/: ldlidar.rules
src/ldlidar_ros2/src/: demo.cpp
src/r2bot_bringup/: CMakeLists.txt  align_once.launch.py  align_to_obstacles.py  package.xml
src/r2bot_bringup/config/: nav2_view.rviz  object_follower.yaml  r2bot_nav2_params.yaml
src/r2bot_bringup/config/maps/: r2_map.pgm  r2_map.yaml
src/r2bot_bringup/launch/: align_once.launch.py  approach_lidar_box_face.launch.py  bringup.launch.py  mapping.launch.py  nav2.launch.py  object_follow.launch.py  urdf2tf.launch.py
src/r2bot_bringup/scripts/: align_to_obstacles.py  approach_lidar_box_face.py  direction.py  odom_calculator.py  rgbd_object_approach.py
src/r2bot_bringup/src/: d435_camera_node.cpp
src/r2bot_description/: CMakeLists.txt  package.xml
src/r2bot_description/urdf/: r2bot.urdf
src/ros2_astra_camera/astra_camera/: CMakeLists.txt
src/ros2_astra_camera/astra_camera/openni2_redist/: x64
